<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.gameoftag.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/main_text"
        android:text="@string/header_wellcome"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"/>
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Timer"
        android:layout_below="@id/main_text"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="?android:textAppearanceSmall"/>
    <TextView
        android:id="@+id/iterations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Iterations"
        android:layout_alignParentRight="true"
        android:layout_below="@id/main_text"
        android:textColor="@android:color/holo_green_dark"
        android:textAppearance="?android:textAppearanceSmall"/>
    <LinearLayout
        android:id="@+id/array_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/darker_gray">
        <LinearLayout
            style="@style/VerticalLinearLayout">
            <TextView
                android:id="@+id/block11"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block21"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block31"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block41"
                style="@style/PortraitCells" />
        </LinearLayout>
        <LinearLayout
            style="@style/VerticalLinearLayout">
            <TextView
                android:id="@+id/block12"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block22"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block32"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block42"
                style="@style/PortraitCells" />
        </LinearLayout>
        <LinearLayout
            style="@style/VerticalLinearLayout">
            <TextView
                android:id="@+id/block13"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block23"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block33"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block43"
                style="@style/PortraitCells" />
        </LinearLayout>
        <LinearLayout
            style="@style/VerticalLinearLayout">
            <TextView
                android:id="@+id/block14"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block24"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block34"
                style="@style/PortraitCells" />
            <TextView
                android:id="@+id/block44"
                style="@style/PortraitCells"
                android:background="@android:color/holo_orange_light"
                android:text="@string/freecell" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_alignParentBottom="true"
        android:onClick="shuffleOfTag"
        android:enabled="false"/>
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="resetOfTag"/>
</RelativeLayout>
