<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.gameoftag.MainActivity">

    <TextView
        android:id="@+id/main_text"
        android:text="@string/header_wellcome"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/array_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/block11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block21"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block31"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block41"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/block12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block22"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block32"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block42"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/block13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block23"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block33"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block43"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/block14"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block24"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block34"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_blue_bright"
                android:text="\?"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
            <TextView
                android:id="@+id/block44"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@android:color/holo_orange_light"
                android:text="\#"
                android:textSize="45sp"
                android:textAlignment="center"
                android:onClick="moveTextView"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_alignParentBottom="true"
        android:onClick="shuffleOfTag"
        android:enabled="false"/>
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="resetOfTag"/>
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Timer"
        android:layout_above="@+id/new_game" />
    <TextView
        android:id="@+id/iterations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Iterations"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/start" />
</RelativeLayout>
